[tool.poetry]
name = "fastapi-testing-with-dummy-db"
version = "0.1.0"
description = ""
authors = ["Ramiro Gallo <ramiro.r.gallo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.4.0"
alembic = "^1.8.1"
email-validator = "^1.2.1"
fastapi = "^0.82.0"
gunicorn = "^20.1.0"
newrelic = "^7.6.0.173"
pymysql = "^1.0.2"
sqlalchemy = "^1.4.30"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
coverage = "^6.4.4"
flaky = "^3.7.0"
ipdb = "^0.13.9"
pylint = "^2.15.0"
pytest = "^7.1.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
